# pyvaem

./: .gitignore  README.md  pyproject.toml
src/: exampleVaem.py  example_usage.py
src/pyvaem/: VaemDriver.py  __init__.py  driver.py  utils.py  vaemHelper.py
src/vaem/: VaemDriver.py  __init__.py  dataTypes.py  vaemHelper.py
tests/pyvaem_tests/: test_vaemHelper.py
