[tool.poetry]
name = "pyvaem"
version = "0.0.0"
description = "Python API for VAEM Festo valve control module"
authors = ["Jose <jlmoraleshellin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jlmoraleshellin/pyvaem"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pymodbus = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"